--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Bits and Bytes
 email: raymond.machira+github@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  FooBar
+description: ©
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://machira.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  machira
