Add google analytics tag.

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ email: raymond.machira+github@gmail.com
 description: ©
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://machira.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+google_analytics: UA-109685987-1
 github_username:  machira
 
 # Build settings
